repository, registry and workspace services - initial

--- a/modules/database-derby/pom.xml
+++ b/modules/database-derby/pom.xml
@@ -9,7 +9,7 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<name>Datasource - Local</name>
+	<name>Database - Derby</name>
 	<artifactId>dirigible-database-derby</artifactId>
     <packaging>jar</packaging>
     
