--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -125,6 +125,21 @@
 		 	<artifactId>dirigible-runtime-core</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-runtime-repository</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-runtime-registry</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-runtime-workspaces</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- Services -->
 		<dependency>
