--- a/modules/runtime-repository/pom.xml
+++ b/modules/runtime-repository/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../../pom.xml</relativePath>
 	</parent>
 
-	<name>Database - API</name>
-	<artifactId>dirigible-database-api</artifactId>
+	<name>Runtime - Repository</name>
+	<artifactId>dirigible-runtime-repository</artifactId>
     <packaging>jar</packaging>
     
     <build>
@@ -29,16 +29,16 @@
     </build>
     
     <dependencies>
-        <dependency>
+    	<dependency>
             <groupId>org.eclipse.dirigible</groupId>
-            <artifactId>dirigible-commons-config</artifactId>
+            <artifactId>dirigible-commons-api</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
-        <dependency>
-	    	<groupId>org.eclipse.dirigible</groupId>
-			<artifactId>dirigible-commons-api</artifactId>
-			<version>${dirigible.version}</version>
-    	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-api</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
     </dependencies>
 
 </project>
