generic javascript module added

--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -144,6 +144,11 @@
 		<!-- Services -->
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-engine-api</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-engine-web</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
