--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -115,6 +115,11 @@
 		</dependency>
 		<dependency>
 		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-database-squle</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
 		 	<artifactId>dirigible-database-derby</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
