--- a/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
+++ b/org.eclipse.dirigible/org.eclipse.dirigible.parent/pom.xml
@@ -447,7 +447,7 @@
 							</execution>
 						</executions>
 					</plugin>
-					<!-- <plugin>
+					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-javadoc-plugin</artifactId>
 						<version>2.9.1</version>
@@ -459,8 +459,8 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin> -->
-					<!-- <plugin>
+					</plugin>
+					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-gpg-plugin</artifactId>
 						<version>1.5</version>
@@ -473,8 +473,19 @@
 								</goals>
 							</execution>
 						</executions>
-					</plugin> -->
-
+					</plugin>
+					<plugin>
+						<groupId>org.sonatype.plugins</groupId>
+						<artifactId>nexus-staging-maven-plugin</artifactId>
+						<version>1.6.7</version>
+						<extensions>true</extensions>
+						<configuration>
+							<serverId>ossrh</serverId>
+							<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+							<autoReleaseAfterClose>false</autoReleaseAfterClose>
+						</configuration>
+					</plugin>
+										
 
 				</plugins>
 
@@ -677,7 +688,7 @@
 		</snapshotRepository>
 		<repository>
 			<id>ossrh</id>
-			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2</url>
 		</repository>
 	</distributionManagement>
 
