--- a/modules/engine-web/pom.xml
+++ b/modules/engine-web/pom.xml
@@ -41,6 +41,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-engine-api</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-api-http</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
