--- a/pom.xml
+++ b/pom.xml
@@ -347,9 +347,9 @@
 		<module>modules/repository-zip</module>
 		<module>modules/repository-local</module>
 		<module>modules/repository-master</module>
-		<!-- <module>modules/repository-rest</module> -->
 
 		<module>modules/core-extensions</module>
+		<module>modules/core-git</module>
 
 		<module>modules/database-api</module>
 		<module>modules/database-squle</module>
