workspace REST API completed -> workspace, project, collection, resource management

--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -200,7 +200,11 @@
 		</dependency>
 		
 		
-
+		<dependency>
+		  <groupId>javax.annotation</groupId>
+		  <artifactId>jsr250-api</artifactId>
+		  <version>1.0</version>
+		</dependency>
 		
 
 		<!-- <dependency>
