--- a/releng/war-all/src/main/webapp/WEB-INF/web.xml
+++ b/releng/war-all/src/main/webapp/WEB-INF/web.xml
@@ -37,8 +37,18 @@
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
 
+	<security-constraint>
+	    <web-resource-collection>
+	        <web-resource-name>IDE Services</web-resource-name>
+	        <url-pattern>/services/v3/ide/*</url-pattern>
+	    </web-resource-collection>
+	    <auth-constraint>
+	        <role-name>Developer</role-name>
+	    </auth-constraint>
+	</security-constraint>
+	
 	<login-config>
-		<auth-method>FORM</auth-method>
+		<auth-method>BASIC</auth-method>
 	</login-config>
 	
 	<session-config>
