--- a/pom.xml
+++ b/pom.xml
@@ -354,8 +354,12 @@
 
 		<module>modules/database-api</module>
 		<module>modules/database-squle</module>
-		<module>modules/database-derby</module>
 		<module>modules/database-persistence</module>
+		<module>modules/database-data-structures</module>
+		
+		<module>modules/database-derby</module>
+		<module>modules/database-managed</module>
+		
 		
 		<module>modules/runtime-core</module>
 		<module>modules/runtime-repository</module>
@@ -363,6 +367,7 @@
 		
 		<module>modules/runtime-ide-workspaces</module>
 		<module>modules/runtime-ide-terminal</module>
+		<module>modules/runtime-ide-databases</module>
 		
 		<module>modules/engine-api</module>
 		<module>modules/engine-web</module>
