database metadata as json added

--- a/content/ide-terminal/pom.xml
+++ b/content/ide-terminal/pom.xml
@@ -16,7 +16,7 @@
 	<scm>
 		<connection>scm:git:git://github.com/dirigiblelabs/ide-terminal.git</connection>
 		<developerConnection>scm:git:https://github.com/dirigiblelabs/ide-terminal.git</developerConnection>
-		<url>https://github.com/dirigiblelabs/http</url>
+		<url>https://github.com/dirigiblelabs/ide-terminal</url>
 	</scm>
 
 	<build>
