--- a/modules/runtime-ide-databases/pom.xml
+++ b/modules/runtime-ide-databases/pom.xml
@@ -41,6 +41,11 @@
         </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-database-squle</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-database-derby</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
