Adds "AbstractExceptionHandler" concept

--- a/modules/repository-api/pom.xml
+++ b/modules/repository-api/pom.xml
@@ -29,6 +29,11 @@
     </build>
     
     <dependencies>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-commons-api</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.eclipse.dirigible</groupId>
             <artifactId>dirigible-commons-config</artifactId>
