--- a/modules/core-scheduler/pom.xml
+++ b/modules/core-scheduler/pom.xml
@@ -55,6 +55,12 @@
 			<artifactId>dirigible-commons-test</artifactId>
 			<version>${dirigible.version}</version>
     	</dependency>
+    	
+    	<dependency>
+		    <groupId>org.quartz-scheduler</groupId>
+		    <artifactId>quartz</artifactId>
+		    <version>2.3.0</version>
+		</dependency>
     </dependencies>
 
 </project>
