--- a/modules/core-scheduler/pom.xml
+++ b/modules/core-scheduler/pom.xml
@@ -45,6 +45,11 @@
 			<version>${dirigible.version}</version>
     	</dependency>
     	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-api</artifactId>
+            <version>${dirigible.version}</version>
+        </dependency>
+    	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-api-auth</artifactId>
 			<version>${dirigible.version}</version>
