--- a/pom.xml
+++ b/pom.xml
@@ -366,6 +366,7 @@
 		<module>modules/runtime-core</module>
 		<module>modules/runtime-repository</module>
 		<module>modules/runtime-registry</module>
+		<module>modules/runtime-extensions</module>
 
 		<module>modules/runtime-ide-workspaces</module>
 		<module>modules/runtime-ide-terminal</module>
