--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -156,6 +156,16 @@
 		 	<artifactId>dirigible-core-security</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-core-scheduler</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-core-publisher</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- Runtime Services -->
 		<dependency>
@@ -178,6 +188,7 @@
 		 	<artifactId>dirigible-runtime-extensions</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		
 		
 		<!-- Runtime IDE Services -->
 		<dependency>
