--- a/releng/war-all/src/main/resources/simplelogger.properties
+++ b/releng/war-all/src/main/resources/simplelogger.properties
@@ -13,7 +13,7 @@ org.slf4j.simpleLogger.defaultLogLevel=info
 
 # Set to true if you want the current date and time to be included in output messages.
 # Default is false, and will output the number of milliseconds elapsed since startup.
-#org.slf4j.simpleLogger.showDateTime=false
+org.slf4j.simpleLogger.showDateTime=true
 
 # The date and time format to be used in the output messages.
 # The pattern describing the date and time format is the same that is used in java.text.SimpleDateFormat.
@@ -27,8 +27,8 @@ org.slf4j.simpleLogger.defaultLogLevel=info
 
 # Set to true if you want the Logger instance name to be included in output messages.
 # Defaults to true.
-#org.slf4j.simpleLogger.showLogName=true
+org.slf4j.simpleLogger.showLogName=false
 
 # Set to true if you want the last component of the name to be included in output messages.
 # Defaults to false.
-#org.slf4j.simpleLogger.showShortLogName=false
+org.slf4j.simpleLogger.showShortLogName=true
