--- a/content/api-core/pom.xml
+++ b/content/api-core/pom.xml
@@ -9,8 +9,8 @@
 		<relativePath>../pom.xml</relativePath>
 	</parent>
 
-	<name>Content - API - HTTP</name>
-	<artifactId>dirigible-content-api-http</artifactId>
+	<name>Content - API - Core</name>
+	<artifactId>dirigible-content-api-core</artifactId>
     <packaging>jar</packaging>
 
 	<scm>
@@ -20,8 +20,8 @@
 	</scm>
 	
 	<properties>
-		<content.repository.name>api-v3-http</content.repository.name>
-		<content.project.name>http</content.project.name>
+		<content.repository.name>api-v3-core</content.repository.name>
+		<content.project.name>core</content.project.name>
 
 		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
 		<content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
