--- a/content/pom.xml
+++ b/content/pom.xml
@@ -20,21 +20,23 @@
 	</scm>
 	
 	<properties>
-		<content.name>dirigiblelabs</content.name>
+		<content.repository.name>dirigiblelabs</content.repository.name>
+		<content.project.name>dirigiblelabs</content.project.name>
 
-		<content.scm.url>https://github.com/dirigiblelabs/${content.name}</content.scm.url>
-		<content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.name}.git</content.scm.connection>
-		<content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.name}</content.scm.developerConnection>
+		<content.scm.url>https://github.com/dirigiblelabs/${content.repository.name}</content.scm.url>
+		<content.scm.connection>scm:git:git://github.com/dirigiblelabs/${content.repository.name}.git</content.scm.connection>
+		<content.scm.developerConnection>scm:git:https://github.com/dirigiblelabs/${content.repository.name}</content.scm.developerConnection>
 
 		<content.scm.server>github</content.scm.server>
 		<content.scm.checkoutDirectory>target</content.scm.checkoutDirectory>
-		<content.source.directory>target/${content.name}</content.source.directory>
-		<content.output.directory>${basedir}/src/main/resources/${content.name}</content.output.directory>
+		<content.source.directory>target/${content.project.name}</content.source.directory>
+		<content.output.directory>${basedir}/src/main/resources/${content.project.name}</content.output.directory>
 	</properties>
 
 	<modules>
 
 		<!-- Content - API -->
+		<module>api-core</module>
 		<module>api-http</module>
 
 		<!-- Content - IDE -->
