java facade added

--- a/modules/api-core/pom.xml
+++ b/modules/api-core/pom.xml
@@ -39,6 +39,18 @@
             <artifactId>dirigible-core-extensions</artifactId>
             <version>${dirigible.version}</version>
         </dependency>
+        
+        <dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-commons-test</artifactId>
+			<version>${dirigible.version}</version>
+    	</dependency>
+    	<dependency>
+            <groupId>org.eclipse.dirigible</groupId>
+            <artifactId>dirigible-repository-local</artifactId>
+            <version>${dirigible.version}</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
 </project>
