--- a/content/pom.xml
+++ b/content/pom.xml
@@ -40,6 +40,7 @@
 		<module>api-http</module>
 
 		<!-- Content - IDE -->
+		<module>ide-core</module>
 		<module>ide-terminal</module>
 		<module>ide-workspace</module>
 
