--- a/releng/war-all/src/main/webapp/WEB-INF/web.xml
+++ b/releng/war-all/src/main/webapp/WEB-INF/web.xml
@@ -50,6 +50,7 @@
 	    <web-resource-collection>
 	        <web-resource-name>IDE Services</web-resource-name>
 	        <url-pattern>/services/v3/ide/*</url-pattern>
+	        <url-pattern>/websockets/v3/ide/*</url-pattern>
 	    </web-resource-collection>
 	    <auth-constraint>
 	        <role-name>Developer</role-name>
