--- a/content/pom.xml
+++ b/content/pom.xml
@@ -43,6 +43,7 @@
 		<module>ide-core</module>
 		<module>ide-terminal</module>
 		<module>ide-console</module>
+		<module>ide-editor-orion</module>
 		<module>ide-workspace</module>
 
 	</modules>
