--- a/releng/war-all/pom.xml
+++ b/releng/war-all/pom.xml
@@ -216,6 +216,11 @@
 		 	<artifactId>dirigible-runtime-ide-databases</artifactId>
 		 	<version>${dirigible.version}</version>
 		</dependency>
+		<dependency>
+		 	<groupId>org.eclipse.dirigible</groupId>
+		 	<artifactId>dirigible-runtime-ide-publisher</artifactId>
+		 	<version>${dirigible.version}</version>
+		</dependency>
 		
 		<!-- Engines Services -->
 		<dependency>
