security synchronizer added

--- a/modules/core-security/pom.xml
+++ b/modules/core-security/pom.xml
@@ -46,6 +46,11 @@
     	</dependency>
     	<dependency>
 	    	<groupId>org.eclipse.dirigible</groupId>
+			<artifactId>dirigible-core-scheduler</artifactId>
+			<version>${dirigible.version}</version>
+    	</dependency>
+    	<dependency>
+	    	<groupId>org.eclipse.dirigible</groupId>
 			<artifactId>dirigible-api-auth</artifactId>
 			<version>${dirigible.version}</version>
     	</dependency>
